spaceops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: spaceops-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: localhost

      http:
        paths:

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: spaceops-backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix

            backend:
              service:
                name: spaceops-frontend
                port:
                  number: 80
